@@ -396,8 +396,7 @@ means any VM of at least version 1.2.</p>
     <td valign="top">Necessary to enable javadoc to handle assertions
     present in J2SE v 1.4 source code. Set this to &quot;1.4&quot; to
     documents code that compiles using <code>&quot;javac -source
-    1.4&quot;</code>.  Will be ignored if you use a custom
-    doclet.</td>
+    1.4&quot;</code>.</td>
     <td align="center" valign="top">1.4</td>
     <td align="center" valign="top">No</td>
   </tr>
